--- a/demo-jpa/pom.xml
+++ b/demo-jpa/pom.xml
@@ -9,9 +9,9 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.sun</groupId>
-    <artifactId>demo-jpa</artifactId>
+    <artifactId>demo</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>demo-jpa</name>
+    <name>demo</name>
     <description>Demo project for Spring Boot about jpa</description>
 
     <properties>
